vlib/v/parser/tests/cast_to_any_type_err.out
vlib/v/parser/tests/cast_to_any_type_err.vv:2:7: error: cannot use `any` type here
    1 | fn main() {
    2 |     a := any(22)
      |          ~~~
    3 |     println(a)
    4 | }
